--- a/package.json
+++ b/package.json
@@ -17,12 +17,13 @@
     "classnames": "^2.3.2",
     "json-server": "^0.17.4",
     "json-server-auth": "^2.1.0",
-    "lottie-web": "^5.12.2",
+    "lottie-react": "^2.4.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.20.1",
+    "redux-persist": "^6.0.0",
     "swiper": "^11.0.5"
   },
   "devDependencies": {
