--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "classnames": "^2.3.2",
+    "i18next": "^23.7.11",
+    "i18next-browser-languagedetector": "^7.2.0",
     "json-server": "^0.17.4",
     "json-server-auth": "^2.1.0",
     "lottie-react": "^2.4.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
+    "react-i18next": "^13.5.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.20.1",
     "redux-persist": "^6.0.0",
