--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.1",
     "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "classnames": "^2.3.2",
+    "formik": "^2.4.5",
     "i18next": "^23.7.11",
     "i18next-browser-languagedetector": "^7.2.0",
     "json-server": "^0.17.4",
@@ -23,11 +27,13 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
+    "react-flags-select": "^2.2.3",
     "react-i18next": "^13.5.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.20.1",
     "redux-persist": "^6.0.0",
-    "swiper": "^11.0.5"
+    "swiper": "^11.0.5",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@types/node": "^20.10.4",
