--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "^18.2.0",
     "react-flags-select": "^2.2.3",
     "react-i18next": "^13.5.0",
+    "react-icons": "^4.12.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.20.1",
     "redux-persist": "^6.0.0",
