--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.15.1",
     "@reduxjs/toolkit": "^1.9.7",
+    "@tanstack/react-query": "^5.15.0",
     "atropos": "^2.0.2",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
